--- a/css/about-styles.css
+++ b/css/about-styles.css
@@ -199,6 +199,7 @@
     font-weight: 700;
     z-index: 2;
     flex-shrink: 0;
+    margin-top: 25px;
 }
 
 .timeline-content 
@@ -289,7 +290,7 @@
     
     .timeline::before 
     {
-        left: 30px;
+        left: -100px;
     }
     
     .timeline-item 
@@ -304,7 +305,9 @@
         height: 60px;
         font-size: 1rem;
         position: absolute;
-        left: -80px;
+        left: -60px;
+        top: 47.5px;
+        margin-top: 0;
     }
     
     .timeline-content::before 
