--- a/css/suppliers-styles.css
+++ b/css/suppliers-styles.css
@@ -260,6 +260,14 @@
     flex-direction: column;
 }
 
+@media (min-width: 992px) and (max-width: 1200px)
+{
+    .partners-grid 
+    {
+        grid-template-columns: repeat(auto-fit, minmax(125px, 1fr));
+    }
+}
+
 @media (max-width: 768px) 
 {
     .hero-section 
@@ -295,6 +303,7 @@
     {
         flex-direction: column;
         text-align: center;
+        align-items: center;
     }
     
     .requirement-icon 
